@@ -3,6 +3,7 @@ Changelog
 
 0.13-dev - (unreleased)
 -----------------------
+ * Bug fix: use getFolderContents instead of objectValues() to retrieve children [tiberich #4418]
 
 0.12 - (2011-05-24)
 -------------------
